--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
       margin: 40px auto;
       padding: 0 20px;
     }
+    .video {
+      margin: 40px auto;
+      max-width: 800px;
+      padding: 0 20px;
+      text-align: center;
+    }
+    .video iframe {
+      width: 100%;
+      max-width: 700px;
+      height: 400px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
     .benefits {
       background: white;
       border-radius: 12px;
@@ -87,6 +100,11 @@
     <p>Tenha um site moderno, funcional e que realmente converte clientes!</p>
   </header>
 
+  <div class="video">
+    <h2>Veja o sistema funcionando na prática</h2>
+    <iframe src="https://www.youtube.com/embed/9oSzd0VeVno" frameborder="0" allowfullscreen></iframe>
+  </div>
+
   <section class="benefits">
     <h2>Por que escolher nosso Sistema de Delivery?</h2>
     <ul>
@@ -104,7 +122,7 @@
 
   <div class="cta">
     <p><strong>Pronto para começar a vender mais?</strong></p>
-    <a href="https://wa.me/5584986725871" target="_blank">Fale agora pelo WhatsApp</a>
+    <a href="https://wa.me/seunumeroaqui" target="_blank">Fale agora pelo WhatsApp</a>
   </div>
 
   <footer>
