--- a/index.html
+++ b/index.html
@@ -9,32 +9,31 @@
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
-      background: #f4f7f9;
-      color: #222;
-      line-height: 1.5;
+      background: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
     }
     header {
-      background: #005f4d;
+      background: #008060;
       color: white;
-      padding: 50px 20px 70px;
+      padding: 40px 20px;
       text-align: center;
-      box-shadow: 0 8px 15px rgb(0 0 0 / 0.15);
     }
     header h1 {
-      font-size: 2.8rem;
-      font-weight: 900;
-      margin-bottom: 10px;
-      letter-spacing: -0.03em;
+      font-size: 2.5rem;
+      margin: 0 0 10px;
     }
     header p {
-      font-size: 1.4rem;
-      font-weight: 600;
-      opacity: 0.9;
-      margin: 0 auto;
-      max-width: 600px;
+      font-size: 1.2rem;
+      margin: 0;
+    }
+    section {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
     }
     .video {
-      margin: 40px auto 60px;
+      margin: 40px auto;
       max-width: 800px;
       padding: 0 20px;
       text-align: center;
@@ -43,178 +42,79 @@
       width: 100%;
       max-width: 700px;
       height: 400px;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgb(0 0 0 / 0.1);
-      border: none;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-    section.benefits {
-      max-width: 760px;
-      margin: 0 auto 60px;
+    .benefits {
       background: white;
-      padding: 40px 30px;
-      border-radius: 15px;
-      box-shadow: 0 10px 40px rgb(0 0 0 / 0.06);
+      border-radius: 12px;
+      padding: 30px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
-    section.benefits h2 {
-      font-size: 2.2rem;
-      color: #005f4d;
-      margin-bottom: 25px;
-      font-weight: 900;
-      text-align: center;
-      letter-spacing: -0.02em;
+    .benefits h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #008060;
     }
-    section.benefits ul {
+    .benefits ul {
       list-style: none;
       padding: 0;
-      margin: 0;
     }
-    section.benefits li {
-      font-size: 1.15rem;
-      margin-bottom: 18px;
-      position: relative;
-      padding-left: 35px;
-      font-weight: 600;
-      color: #222;
-      user-select: none;
+    .benefits li {
+      margin-bottom: 15px;
+      font-size: 1.1rem;
     }
-    section.benefits li::before {
-      content: "✅";
-      position: absolute;
-      left: 0;
-      top: 0;
-      font-size: 1.3rem;
-      line-height: 1;
-    }
-    section.benefits p {
-      font-weight: 700;
-      font-size: 1.2rem;
-      color: #005f4d;
-      text-align: center;
-      margin-top: 30px;
-      user-select: none;
+    .benefits li::before {
+      content: '✅';
+      margin-right: 10px;
     }
     .pricing {
-      max-width: 760px;
-      margin: 0 auto 60px;
+      background: #fff;
+      border-radius: 12px;
+      padding: 30px;
+      margin: 40px auto;
+      max-width: 800px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       text-align: center;
-      padding: 40px 30px;
-      background: #fff9f0;
-      border-radius: 20px;
-      box-shadow: 0 15px 60px rgb(245 124 0 / 0.25);
-      position: relative;
-      overflow: visible;
     }
     .pricing h2 {
-      font-size: 2.6rem;
-      color: #d84315;
-      font-weight: 900;
-      margin-bottom: 10px;
-      letter-spacing: -0.03em;
-      user-select: none;
+      font-size: 2rem;
+      color: #008060;
+      margin-bottom: 20px;
     }
-    .price-tag {
-      font-size: 3.6rem;
-      font-weight: 900;
-      color: #f57c00;
-      margin: 15px 0 10px;
-      letter-spacing: -0.05em;
-      user-select: none;
-    }
-    .price-tag small {
-      font-size: 1.4rem;
-      font-weight: 600;
-      color: #d84315;
-      text-decoration: line-through;
-      margin-left: 15px;
-      user-select: none;
-    }
-    .sub-text {
-      font-weight: 700;
-      font-size: 1.3rem;
-      color: #4e342e;
-      margin-bottom: 10px;
-      user-select: none;
-    }
-    .offer-badge {
-      position: absolute;
-      top: -20px;
-      right: 30px;
-      background: #d84315;
-      color: white;
-      padding: 10px 25px;
-      font-weight: 900;
-      font-size: 1.1rem;
-      border-radius: 50px;
-      box-shadow: 0 6px 18px rgb(216 67 21 / 0.7);
-      user-select: none;
-      animation: pulse 2.2s infinite;
-      letter-spacing: 0.02em;
-      text-transform: uppercase;
-    }
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.05); }
+    .pricing p {
+      font-size: 1.2rem;
+      margin: 10px 0;
     }
     .countdown {
-      font-size: 1.6rem;
-      font-weight: 900;
-      color: #d84315;
-      user-select: none;
-      margin-top: 15px;
+      font-size: 1.5rem;
+      color: #d32f2f;
+      font-weight: bold;
+      margin-top: 20px;
     }
     .cta {
       text-align: center;
-      margin-bottom: 80px;
-    }
-    .cta p {
-      font-size: 1.4rem;
-      font-weight: 800;
-      color: #222;
-      margin-bottom: 18px;
-      user-select: none;
+      margin-top: 40px;
     }
     .cta a {
-      display: inline-block;
-      background: #ff6f00;
+      background: #f57c00;
       color: white;
-      padding: 22px 60px;
-      font-size: 1.6rem;
-      font-weight: 900;
-      border-radius: 50px;
+      padding: 16px 30px;
+      border-radius: 8px;
+      font-size: 1.2rem;
       text-decoration: none;
-      box-shadow: 0 10px 25px rgb(255 111 0 / 0.6);
-      transition: background 0.3s ease, transform 0.15s ease;
-      user-select: none;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: background 0.3s ease;
     }
     .cta a:hover {
-      background: #e65100;
-      transform: scale(1.05);
-      box-shadow: 0 15px 40px rgb(230 81 0 / 0.9);
+      background: #ef6c00;
     }
     footer {
       text-align: center;
       padding: 20px;
       font-size: 0.9rem;
-      color: #555;
-      user-select: none;
-    }
-    @media (max-width: 480px) {
-      header h1 {
-        font-size: 2rem;
-      }
-      header p {
-        font-size: 1rem;
-      }
-      .pricing h2 {
-        font-size: 2.2rem;
-      }
-      .price-tag {
-        font-size: 2.8rem;
-      }
-      .cta a {
-        font-size: 1.3rem;
-        padding: 18px 40px;
-      }
+      color: #777;
     }
   </style>
 </head>
@@ -226,7 +126,7 @@
 
   <div class="video">
     <h2>Veja o sistema funcionando na prática</h2>
-    <iframe src="https://www.youtube.com/embed/SEU_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/9oSzd0VeVno" frameborder="0" allowfullscreen></iframe>
   </div>
 
   <section class="benefits">
@@ -244,19 +144,18 @@
   </section>
 
   <section class="pricing">
-    <div class="offer-badge">Oferta Limitada</div>
     <h2>Plano de Assinatura</h2>
-    <div class="price-tag">
-      R$ 40,00
-      <small>R$ 80,00</small>
+    <p><strong>Apenas R$ 80,00 por mês</strong></p>
+    <p><strong>Primeiro mês por apenas R$ 40,00 para você testar!</strong></p>
+    <p>Sem burocracia!!</p>
+    <div class="countdown" id="countdown">
+      Oferta especial termina em: <span id="timer">10:00</span>
     </div>
-    <div class="sub-text">Primeiro mês para testar por apenas R$ 40,00!</div>
-    <div class="countdown" id="countdown">Oferta especial termina em: <span id="timer">10:00</span></div>
   </section>
 
   <div class="cta" id="cta">
     <p><strong>Pronto para começar a vender mais?</strong></p>
-    <a href="https://wa.me/5584986725871" target="_blank" rel="noopener noreferrer">Quero testar por R$ 40,00 agora</a>
+    <a href="https://wa.me/5584986725871?text=Ol%C3%A1!%20Quero%20testar%20o%20Sistema%20Delivery%20pelo%20valor%20promocional%20de%20R%2440,00." target="_blank" rel="noopener noreferrer">Quero testar por R$ 40,00 agora</a>
   </div>
 
   <footer>
