--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
   <div class="video">
     <h2>Veja o sistema funcionando na prática</h2>
-    <iframe src="https://www.youtube.com/embed/SEU_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/9oSzd0VeVno" frameborder="0" allowfullscreen></iframe>
   </div>
 
   <section class="benefits">
@@ -247,8 +247,8 @@
     <div class="offer-badge">Oferta Limitada</div>
     <h2>Plano de Assinatura</h2>
     <div class="price-tag">
-      R$ 80,00
-      <small>R$ 40,00</small>
+      R$ 40,00
+      <small>R$ 80,00</small>
     </div>
     <div class="sub-text">Primeiro mês para testar por apenas R$ 40,00!</div>
     <div class="countdown" id="countdown">Oferta especial termina em: <span id="timer">10:00</span></div>
