--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
   <title>Sistema de Delivery para Seu Negócio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet" />
   <style>
+
+    .feedback {
+  background: #ffffff;
+  padding: 40px 20px;
+  text-align: center;
+  max-width: 800px;
+  margin: 0 auto 40px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+}
+.feedback h2 {
+  color: #008060;
+  font-size: 2rem;
+  margin-bottom: 30px;
+}
+.feedback-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.feedback-item {
+  background: #f5f5f5;
+  padding: 20px;
+  border-radius: 10px;
+  font-style: italic;
+}
+.feedback-item strong {
+  display: block;
+  margin-top: 10px;
+  color: #333;
+  font-style: normal;
+}
+
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
@@ -283,6 +316,28 @@
     <p><strong>Pronto para começar a vender mais?</strong></p>
     <a href="https://wa.me/5584986725871?text=Ol%C3%A1!%20Quero%20testar%20o%20Sistema%20Delivery%20pelo%20valor%20promocional%20de%20R%2440,00." target="_blank" rel="noopener noreferrer">Quero testar por R$ 40,00 agora</a>
   </div>
+
+  <section class="feedback">
+  <h2>O que nossos clientes dizem</h2>
+  <div class="feedback-list">
+    <div class="feedback-item">
+      <p>⭐️⭐️⭐️⭐️⭐️</p>
+      <p>"Simplesmente sensacional! Meu faturamento aumentou muito com esse sistema. Fácil de usar e meus clientes adoraram!"</p>
+      <strong>- João, Pizzaria da Vila</strong>
+    </div>
+    <div class="feedback-item">
+      <p>⭐️⭐️⭐️⭐️⭐️</p>
+      <p>"O sistema é leve, rápido e muito prático. Meus pedidos agora são automáticos no WhatsApp!"</p>
+      <strong>- Maria, Empório Natural</strong>
+    </div>
+    <div class="feedback-item">
+      <p>⭐️⭐️⭐️⭐️⭐️</p>
+      <p>"Vale cada centavo. A equipe me entregou tudo pronto e funcional. Super recomendo."</p>
+      <strong>- Carlos, Lanchonete Bom Sabor</strong>
+    </div>
+  </div>
+</section>
+
 
   <footer>
     <p>© 2025 - Sistema de Delivery Profissional. Todos os direitos reservados.</p>
